# clay-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSES.md  README.md  ThirdPartyNotices.txt
assets/icons/: EngineIcon.xcf  EngineIcon2.xcf
assets/materials/: EmissionPanner.mat  ScalarOnly.mat
assets/prefabs/: EnemyPrefab.prefab  default_humanoid.fbx
assets/quests/: ForestWolves.quest.json
assets/scenes/: PBRSample.scene  SampleScene.scene
assets/shaders/: SimplePBR.shgraph  UnlitColor.shgraph
cmake/: CopyManagedRuntime.cmake
cmake/windows/: ClaymoreAppIcon.rc.in
licenses/: Apache-2.0.txt
managed/ClaymoreEngine/: AnimationController.cs  AnimationControllerOverride.cs  AnimationEventInterop.cs  AnimationStateInterop.cs  AreaInterop.cs  AudioClip.cs  AudioInterop.cs  BakeInWorldGraphAttribute.cs  ClaymoreEngine.csproj  ClaymoreEngine.runtimeconfig.selfcontained.json  CollisionInterop.cs  ComponentInterop.cs  Curve.cs  DialogueInterop.cs  DialogueSystem.cs  DontDestroyOnLoadAttribute.cs  EngineEntry.cs  EngineSyncContext.cs  Entity.cs  EntityExtensions.cs  EntityInterop.cs  IKInterop.cs  InputInterop.cs  InteropExports.cs  InteropProcessor.cs  LookAtInterop.cs  ManagedFrameBridge.cs  ManagedLogger.cs  Material.cs  MaterialInterop.cs  Mesh.cs  MeshInterop.cs  ModuleComponentInterop.cs  MorphAnimator.cs  NavigationInterop.cs  NodeGraphInterop.cs  NpcScalability.cs  ParticleInterop.cs  Physics.cs  PopulateFromResourcesAttribute.cs  (+29 more)
managed/ClaymoreEngine/Modules/: ModuleContracts.cs
managed/ClaymoreEngine/Multiplayer/: NetworkBehaviour.cs  NetworkManager.cs  NetworkVariable.cs  RpcAttribute.cs
managed/ClaymoreEngine/Networking/: MultiplayerRuntime.cs  NetworkingInterop.cs
managed/ClaymoreEngine/components/: Animator.cs  AreaComponent.cs  AudioSourceComponent.cs  BlendShapeComponent.cs  BoneAttachment.cs  Button.cs  CameraComponent.cs  Canvas.cs  CharacterControllerComponent.cs  ColliderComponent.cs  ComponentBase.cs  Dropdown.cs  FitToContent.cs  InputField.cs  LayoutGroup.cs  LightComponent.cs  LookAtConstraintComponent.cs  MeshComponent.cs  ModuleComponentBase.cs  NavAgentComponent.cs  Panel.cs  PortalComponent.cs  ProgressBar.cs  RigidBodyComponent.cs  ScrollView.cs  Slider.cs  SplineComponent.cs  StaticBodyComponent.cs  TerrainComponent.cs  Text.cs  TintController.cs  Toggle.cs  UIRect.cs  UIRenderSpaceUtility.cs  UISceneCapture.cs  UnifiedMorphComponent.cs
managed/ClaymoreEngine/physics/: Ragdoll.cs
managed/Game/Data/: EnemyArchetype.cs  GlobalSettings.cs  WeaponData.cs
managed/Modules/Claymore.Modules.RPG/: Claymore.Modules.RPG.csproj  Claymore.Modules.RPG.sln  CoreDefs.cs  DicePool.cs  DiceSystem.cs  Inventory.cs  RpgModule.cs  SimpleRPGComponent.cs  Stats.cs  VitalComponent.cs
managed/ScriptCompiler/: Program.cs  ScriptCompiler.csproj
scripts/: stage_private_dotnet_runtime.ps1
scripts/blender/: export_armor_wrap.py
shaders/: cs_armor_wrap.sc  cs_grass_finalize.sc  cs_grass_generate.sc  cs_grass_reset.sc  cs_materialized_skinning.sc  fs_depth.sc  fs_depth_alpha_cutout.sc  fs_grass.sc  fs_navcolor.sc  fs_object_id.sc  fs_object_id_instanced.sc  fs_outline.sc  fs_outline_composite.sc  fs_outline_edge.sc  fs_particle.sc  fs_particle_2d.sc  fs_particle_array.sc  fs_pbr.sc  fs_pbr_skinned.sc  fs_pick.sc  fs_point_shadow_depth.sc  fs_point_shadow_depth_alpha_cutout.sc  fs_postprocess.sc  fs_present.sc  fs_psx.sc  fs_select_mask.sc  fs_shadow_debug.sc  fs_sky.sc  fs_terrain.sc  fs_terrain_depth.sc  fs_text.sc  fs_tint.sc  fs_ui.sc  lib_morph_targets.sh  lib_pbr_common.sh  lib_shadergraph.sh  lib_skinning.sh  lib_tint_blend.sh  varying.def.sc  vs_cubes.sc  (+37 more)
shaders/imgui/: fs_ocornut_imgui.sc  vs_ocornut_imgui.sc
src/: main.cpp  runtime_main.cpp
src/core/: RuntimeApplication.cpp  RuntimeApplication.h  RuntimeStubs.cpp
src/core/animation/: AnimationAsset.cpp  AnimationAsset.h  AnimationAssetCache.cpp  AnimationAssetCache.h  AnimationEvaluator.cpp  AnimationEvaluator.h  AnimationPlayerComponent.h  AnimationPreloader.cpp  AnimationPreloader.h  AnimationSerializer.cpp  AnimationSerializer.h  AnimationSystem.cpp  AnimationSystem.h  AnimationTypes.h  AnimatorController.h  AnimatorControllerIO.cpp  AnimatorControllerIO.h  AnimatorControllerOverride.h  AnimatorControllerOverrideIO.cpp  AnimatorControllerOverrideIO.h  AnimatorRuntime.cpp  AnimatorRuntime.h  AvatarDefinition.cpp  AvatarDefinition.h  AvatarMask.h  AvatarSerializer.cpp  AvatarSerializer.h  BindingCache.cpp  BindingCache.h  Curves.cpp  Curves.h  HumanoidAvatar.h  HumanoidBone.h  HumanoidRetargeter.cpp  HumanoidRetargeter.h  PropertyTrack.h  Retargeting.cpp  Retargeting.h  SkeletonBinding.cpp  SkeletonBinding.h  (+1 more)
src/core/assets/: AssetMetadata.h  AssetReference.h  BinaryFormats.h  IAssetResolver.cpp  IAssetResolver.h  ModelRegistry.cpp  ModelRegistry.h  RuntimeAssetResolver.cpp  RuntimeAssetResolver.h  RuntimeModelInstantiator.cpp  RuntimeModelInstantiator.h  RuntimeModelManifest.cpp  RuntimeModelManifest.h  ScriptableObject.cpp  ScriptableObject.h  ScriptableRegistry.cpp  ScriptableRegistry.h  ScriptableSerialization.cpp  ScriptableSerialization.h
src/core/audio/: Audio.cpp  Audio.h  AudioComponents.h
src/core/debug/: PrefabLog.h
src/core/deformation/: ArmorFitComponent.h  ArmorWrapLoader.cpp  ArmorWrapLoader.h  (+3 more)
src/editor/: EditorIcons.h  EditorSettings.h  EnginePaths.cpp  EnginePaths.h  Project.cpp  Project.h  ProjectGenerator.cpp  ProjectGenerator.h  application.cpp  application.h
src/interop/: entityinterop.cpp
src/managed/: ModuleLoader.cpp  ModuleLoader.h
src/runtime/: RuntimeDotNetBridge.cpp  RuntimeProject.cpp  RuntimeRendererDebug.cpp
src/tools/: ScriptCompiler.deps.json  runtime_manifest.json
tests/: HeadlessConfig.cpp  HeadlessConfig.h  HeadlessSceneTests.cpp  HeadlessTestRunner.cpp  TestEnvironment.h  TestFramework.cpp  TestFramework.h  TestMain.cpp
tools/: ScriptCompiler.deps.json  debug_prefab_binary.cpp  debug_prefab_binary.ps1
tools/perf/: character_runtime_sim.py
tools/windows/: Build-CMeng.ps1  Generate-WindowsIcon.ps1
(+605 files in other folders)
